[gd_scene load_steps=2 format=3 uid="uid://tfgbb0y67pnh"]

[ext_resource type="Script" uid="uid://bcyuv7xrqkjjl" path="res://world.gd" id="1_j184h"]

[node name="the_world" type="Node2D"]
script = ExtResource("1_j184h")

[node name="the_bar" type="ProgressBar" parent="."]
offset_right = 404.0
offset_bottom = 27.0
max_value = 10.0
step = 1.0
show_percentage = false

[node name="b_reset" type="Button" parent="."]
offset_left = 577.0
offset_top = 9.0
offset_right = 625.0
offset_bottom = 40.0
text = "reset"
metadata/_edit_use_anchors_ = true

[node name="lbl_disp" type="Label" parent="."]
offset_left = 412.0
offset_top = 2.0
offset_right = 452.0
offset_bottom = 25.0
text = "--"
metadata/_edit_use_anchors_ = true

[node name="lbl_disp2" type="Label" parent="."]
custom_minimum_size = Vector2(10, 10)
offset_left = 413.0
offset_top = 35.0
offset_right = 453.0
offset_bottom = 58.0
text = "--"
metadata/_edit_use_anchors_ = true

[node name="cont_shop" type="VBoxContainer" parent="."]
offset_left = 180.0
offset_top = 86.0
offset_right = 383.0
offset_bottom = 187.0

[node name="Label" type="Label" parent="cont_shop"]
layout_mode = 2
text = "ye olde shoppe"
horizontal_alignment = 1

[node name="b_buy_wallet" type="Button" parent="cont_shop"]
layout_mode = 2
tooltip_text = "expand wallet +%d: $%d"
disabled = true
text = "expand wallet +%d: $%d"
metadata/format = &"expand wallet +%d: $%d"

[node name="b_buy_wallet2" type="Button" parent="cont_shop"]
visible = false
layout_mode = 2
disabled = true
text = "expand wallet +%d: $%d"
metadata/format = &"expand wallet +%d: $%d"

[node name="b_buy5" type="Button" parent="cont_shop"]
layout_mode = 2
disabled = true
text = "unlock +5: $COST"
metadata/cost = 25
metadata/format = &"unlock +5: $%d"

[node name="b_buy10" type="Button" parent="cont_shop"]
layout_mode = 2
disabled = true
text = "unlock +10: $COST
"
metadata/cost = 50
metadata/format = &"unlock +10: $%d"

[node name="cont_clickers" type="VBoxContainer" parent="."]
offset_left = 6.0
offset_top = 61.0
offset_right = 126.0
offset_bottom = 183.0
theme_override_constants/separation = 7

[node name="b_go_up1" type="Button" parent="cont_clickers"]
layout_mode = 2
size_flags_horizontal = 5
theme_override_font_sizes/font_size = 20
text = "+1"
metadata/_edit_use_anchors_ = true

[node name="b_go_up5" type="Button" parent="cont_clickers"]
layout_mode = 2
size_flags_horizontal = 5
theme_override_font_sizes/font_size = 20
disabled = true
text = "+5"
metadata/_edit_use_anchors_ = true

[node name="b_go_up10" type="Button" parent="cont_clickers"]
layout_mode = 2
size_flags_horizontal = 5
theme_override_font_sizes/font_size = 20
disabled = true
text = "+10"
metadata/_edit_use_anchors_ = true

[connection signal="changed" from="the_bar" to="." method="_on_the_bar_changed"]
[connection signal="value_changed" from="the_bar" to="." method="_on_the_bar_value_changed"]
[connection signal="pressed" from="b_reset" to="." method="_on_button_reset_pressed"]
[connection signal="pressed" from="cont_shop/b_buy_wallet" to="." method="_on_b_buy_walletA_pressed"]
[connection signal="ready" from="cont_shop/b_buy_wallet" to="." method="_on_b_buy_wallet_ready"]
[connection signal="pressed" from="cont_shop/b_buy_wallet2" to="." method="_on_b_buy_walletB_pressed"]
[connection signal="ready" from="cont_shop/b_buy_wallet2" to="." method="_on_b_buy_wallet2_ready"]
[connection signal="pressed" from="cont_shop/b_buy5" to="." method="_on_button_pressed_buy5"]
[connection signal="ready" from="cont_shop/b_buy5" to="." method="_on_b_buy_5_ready"]
[connection signal="pressed" from="cont_shop/b_buy10" to="." method="_on_button_pressed_buy10"]
[connection signal="ready" from="cont_shop/b_buy10" to="." method="_on_b_buy_10_ready"]
[connection signal="pressed" from="cont_clickers/b_go_up1" to="." method="_on_button_up1_pressed"]
[connection signal="pressed" from="cont_clickers/b_go_up5" to="." method="_on_button_up5_pressed"]
[connection signal="pressed" from="cont_clickers/b_go_up10" to="." method="_on_button_up10_pressed"]
